[package]
name = "adafruit_esp32s3_tft"
version = "0.1.2"
edition = "2021"
description = "Static typing for the adafruit esp32s3-tft"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PsychicNoodles/adafruit_esp32s3_tft"

[dependencies]
esp-idf-hal = { version = "0.44.1", optional = true }

[features]
esp-idf-hal = ["dep:esp-idf-hal"]
